chore: using nginx

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "jest": "^29.7.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.9.2"
   }
 }
