--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,21 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - "80:80"
+    environment:
+      DATABASE_URL: "postgresql://postgres:mysecretpassword@postgres:5432/mydatabase"
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:latest
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: mysecretpassword
+      POSTGRES_DB: mydatabase
+    volumes:
+      - postgres_data:/var/lib/postgresql/postgres_data
+
+volumes:
+  postgres_data:
