--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,29 @@
-version: "3.4"
-
 services:
-  galaxy:
+  app:
+    container_name: galaxya
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
     ports:
       - "80:80"
     environment:
-      DATABASE_URL: "postgresql://postgres:mysecretpassword@postgres:5432/mydatabase"
+      - DATABASE_URL=${DATABASE_URL}
     depends_on:
       - postgres
+    restart: unless-stopped
 
   postgres:
+    container_name: postgres_db
     image: postgres:latest
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: mysecretpassword
-      POSTGRES_DB: mydatabase
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
-      - postgres_data:/var/lib/postgresql/postgres_data
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
 
 volumes:
   postgres_data:
