--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,38 @@
-# nginx.conf
-
 server {
     listen 80;
-
     server_name localhost;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Serve static files with caching for better performance
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|eot)$ {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+        try_files $uri =404;
+        access_log off;
+        log_not_found off;
     }
 
+    # SPA fallback — redirect all other requests to index.html
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Custom error page for server errors
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
+        internal;
     }
+
+    # Basic security headers
+    add_header X-Content-Type-Options nosniff;
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-XSS-Protection "1; mode=block";
+
+    # Enable gzip compression for faster loading
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_min_length 256;
 }
