chore: adding correct host

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # App environment
-DATABASE_URL=postgresql://postgres:mysecretpassword@postgres:5432/postgres
+DATABASE_URL=postgresql://postgres:mysecretpassword@localhost:5432/postgres
 
 # Postgres environment
 POSTGRES_DB=postgres
