--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,37 @@
+version: "3.9"
+
 services:
-  app:
-    container_name: app
+  frontend:
+    container_name: frontend
     build:
-      context: .
+      context: ./apps/frontend
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "3000:5173"
+    depends_on:
+      - backend
+    networks:
+      - network
+    restart: unless-stopped
+
+  backend:
+    container_name: backend
+    build:
+      context: ./apps/backend
+      dockerfile: Dockerfile
+    ports:
+      - "3001:3000"
+    env_file:
+      - .env
     environment:
       - DATABASE_URL=${DATABASE_URL}
+    volumes:
+      - ./apps/backend:/app
+    command: npm run start:dev
     depends_on:
       - postgres
+    networks:
+      - network
     restart: unless-stopped
 
   postgres:
@@ -17,13 +39,21 @@ services:
     image: postgres:latest
     ports:
       - "5432:5432"
+    env_file:
+      - .env
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - network
     restart: unless-stopped
 
 volumes:
   postgres_data:
+
+networks:
+  network:
+    driver: bridge
