--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
-version: "3.9"
-
 services:
   frontend:
     container_name: frontend
     build:
       context: ./apps/frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
-      - "3000:5173"
+      - "5173:5173"
+    volumes:
+      - ./apps/frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
     networks:
@@ -18,15 +19,16 @@ services:
     container_name: backend
     build:
       context: ./apps/backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
-      - "3001:3000"
+      - "3000:3000"
     env_file:
       - .env
     environment:
       - DATABASE_URL=${DATABASE_URL}
     volumes:
       - ./apps/backend:/app
+      - /app/node_modules
     command: npm run start:dev
     depends_on:
       - postgres
