--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,12 +10,18 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@tailwindcss/postcss": "^4.1.11",
 		"axios": "^1.10.0",
+		"class-variance-authority": "^0.7.1",
+		"lucide-react": "^0.542.0",
 		"postcss": "^8.5.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router-dom": "^7.7.0",
+		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.11"
 	},
 	"devDependencies": {
